Fixed button and page alignment

--- a/public/styles/brand-show.css
+++ b/public/styles/brand-show.css
@@ -2,11 +2,6 @@
 
 
 body {
-    /* background-color: rebeccapurple; */
-    margin: 20px;
-}
-
-body {
   padding: 10px;
   background-color: #f5f5f5;
   background-repeat: no-repeat;
@@ -47,6 +42,13 @@ h1, h2 {
     font-family: 'Lobster', cursive;
 }
 
+.section-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 84vh;
+}
+
 .field-background {
   display: flex;
   flex-direction: column;
@@ -54,8 +56,9 @@ h1, h2 {
   background-color: rgba(210, 214, 218, 0.63);
   position: absolute;
   border-radius: 5px;
-  height: 800px;
+  height: 650px;
   width: 500px;
+  margin-bottom: 100px;
 }
 
 .anchor-link {
@@ -63,11 +66,11 @@ h1, h2 {
   flex-direction: column;
 }
 
-section {
+/* section {
     margin-left: 33%;
     margin-right:33%;
     width: 33%;
-}
+} */
 
 .label {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -94,8 +97,10 @@ section {
 }
 
 .button-container {
+  width: 500px;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .delete-edit {
@@ -106,7 +111,7 @@ section {
   /* position: absolute; */
   text-decoration: none;
   color: inherit;
-  width: 100%;
+  
   height: 100%;
 }
 
